--- a/producer/Dockerfile
+++ b/producer/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.10-slim
 WORKDIR /app
 COPY producer.py .
+COPY wait-for-kafka.sh .
 RUN pip install --no-cache-dir kafka-python faker
-CMD ["python", "producer.py"]
+RUN chmod +x wait-for-kafka.sh
+CMD ["./wait-for-kafka.sh", "kafka:9092", "python", "producer.py"]
